--- a/upcloo-altervista/languages/wp_upcloo-it_IT.po
+++ b/upcloo-altervista/languages/wp_upcloo-it_IT.po
@@ -2,53 +2,69 @@ msgid ""
 msgstr ""
 "Project-Id-Version: UpCloo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-15 11:01+0100\n"
-"PO-Revision-Date: 2013-01-15 11:01+0100\n"
+"POT-Creation-Date: 2013-06-18 14:14+0100\n"
+"PO-Revision-Date: 2013-06-18 14:16+0100\n"
 "Last-Translator: Walter Dal Mut <walter.dalmut@gmail.com>\n"
 "Language-Team: UpCloo Ltd. <info@upcloo.com>\n"
-"Language: \n"
+"Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;_e;__\n"
 "X-Poedit-Basepath: .\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: ITALY\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../wp-upcloo.php:60
-#: ../wp-upcloo.php:105
+#: ../upcloo-altervista.php:66 ../upcloo-altervista.php:113
 msgid "UpCloo"
 msgstr "UpCloo"
 
-#: ../wp-upcloo.php:60
+#: ../upcloo-altervista.php:66
 msgid "Use UpCloo as a widget instead at the end of the body"
-msgstr "Usare UpCloo come un widget invece che appeso alla fine del corpo di un articolo"
+msgstr ""
+"Usare UpCloo come un widget invece che appeso alla fine del corpo di un "
+"articolo"
 
-#: ../wp-upcloo.php:91
+#: ../upcloo-altervista.php:99
 msgid "Remember that your have to configure UpCloo Plugin: "
 msgstr "Ricordati che devi configurare il plugin di UpCloo"
 
-#: ../wp-upcloo.php:91
+#: ../upcloo-altervista.php:99
 msgid "Config Page"
 msgstr "Pagina di Configurazione"
 
-#: ../wp-upcloo.php:91
+#: ../upcloo-altervista.php:99
 msgid "Advanced Config Page"
 msgstr "Pagina di Configurazione Avanzata"
 
-#: ../wp-upcloo.php:98
+#: ../upcloo-altervista.php:106
 msgid "You do not have sufficient permissions to access this page."
 msgstr "Non hai permessi a sufficienza per visualizzare questa pagina."
 
-#: ../wp-upcloo.php:106
+#: ../upcloo-altervista.php:114
 msgid "Advanced Configurations"
 msgstr "Configurazione Avanzata"
 
-#: ../wp-upcloo.php:147
+#: ../upcloo-altervista.php:155
 msgid "UpCloo News Widget"
 msgstr "Widget Rete di UpCloo."
+
+#: ../UpClooAlterVista/Widget/Partner.php:39
+msgid "UpCloo Network Widget"
+msgstr "Widget Rete di UpCloo"
+
+#: ../UpClooAlterVista/Widget/Partner.php:41
+msgid "The UpCloo Virtual Partner SiteKey Widget"
+msgstr "Widget UpCloo per le Chiavi Sito Partner Virtuali"
+
+#: ../UpClooAlterVista/Widget/Partner.php:57
+msgid "Virtual Partner:"
+msgstr "Partner Virtuale:"
+
+#: ../UpClooAlterVista/Widget/Partner.php:60
+msgid "Option template id:"
+msgstr "ID template opzioni"
 
 #: ../options/app-config-options.php:3
 #: ../options/app-advanced-config-options.php:3
@@ -64,66 +80,78 @@ msgid "Welcome To UpCloo"
 msgstr "Benvenuto in UpCloo"
 
 #: ../options/app-config-options.php:12
-msgid "UpCloo takes tipically 10 minutes to show first correlations. It improves results during next hours and continues to analyze and working for you in a completely automated way."
-msgstr "UpCloo impiega tipicamente 10 minuti per mostrare le prime correlazioni. Il miglioramento dei risultati continua nelle successive ore e il sistema analizzerà e lavorerà per te in modo completamente automatizzato."
+msgid ""
+"UpCloo takes tipically 10 minutes to show first correlations. It improves "
+"results during next hours and continues to analyze and working for you in a "
+"completely automated way."
+msgstr ""
+"UpCloo impiega tipicamente 10 minuti per mostrare le prime correlazioni. Il "
+"miglioramento dei risultati continua nelle successive ore e il sistema "
+"analizzerà e lavorerà per te in modo completamente automatizzato."
 
-#: ../options/app-config-options.php:20
-#: ../options/app-advanced-config-options.php:20
-msgid "Plugin Doc"
-msgstr "Documentazione Plugin"
+#: ../options/app-config-options.php:18
+msgid "Select your best related post widget"
+msgstr "Seleziona come visualizzare le tue correlazioni"
 
-#: ../options/app-config-options.php:22
-#: ../options/app-config-options.php:42
+#: ../options/app-config-options.php:31 ../options/app-config-options.php:48
+msgid "Popover view"
+msgstr "A comparsa"
+
+#: ../options/app-config-options.php:51
+msgid "Below your body"
+msgstr "Sotto il tuo testo"
+
+#: ../options/app-config-options.php:57
+msgid "The box appears in box after the page scroll"
+msgstr "Il box compare dopo aver fatto lo \"scroll\" la pagina"
+
+#: ../options/app-config-options.php:58
+msgid "The box appears automatically below your post body"
+msgstr "Il box compare automaticamente sotto il testo del tuo post"
+
+#: ../options/app-config-options.php:62
 #: ../options/app-advanced-config-options.php:22
-#: ../options/app-advanced-config-options.php:61
+#: ../options/app-advanced-config-options.php:60
 msgid "Save Changes"
 msgstr "Salva le Modifiche"
-
-#: ../options/app-config-options.php:27
-msgid "Your sitekey"
-msgstr "La tua Sitekey"
-
-#: ../options/app-config-options.php:27
-msgid "signup for free"
-msgstr "signup for free"
-
-#: ../options/app-config-options.php:33
-msgid "Your option ID"
-msgstr "ID opzioni"
 
 #: ../options/app-advanced-config-options.php:10
 msgid "UpCloo Advanced Options"
 msgstr "Opzioni UpCloo Avanzate"
+
+#: ../options/app-advanced-config-options.php:20
+msgid "Plugin Doc"
+msgstr "Documentazione Plugin"
 
 #: ../options/app-advanced-config-options.php:27
 msgid "Type of content where show related links"
 msgstr "Tipo di contenuti dove visualizzare i correlati"
 
 #: ../options/app-advanced-config-options.php:27
-msgid "Select type of content that UpCloo has to analyze (tipically just 'post' is a good choice)."
-msgstr "Seleziona il tipo di contenuti che UpCloo deve analizzare (tipicamente 'post' è una buona scelta)."
+msgid ""
+"Select type of content that UpCloo has to analyze (tipically just 'post' is "
+"a good choice)."
+msgstr ""
+"Seleziona il tipo di contenuti che UpCloo deve analizzare (tipicamente "
+"'post' è una buona scelta)."
 
 #: ../options/app-advanced-config-options.php:49
 msgid "UpCloo inline manual placeholder"
 msgstr "Attiva il placeholder di UpCloo manuale"
 
 #: ../options/app-advanced-config-options.php:50
-msgid "Remember that you have to add by hand the UpCloo placeholder into your template"
-msgstr "Ricordati che devi aggiungere manualmente il placehoder di UpCloo nel tuo template"
+msgid ""
+"Remember that you have to add by hand the UpCloo placeholder into your "
+"template"
+msgstr ""
+"Ricordati che devi aggiungere manualmente il placehoder di UpCloo nel tuo "
+"template"
 
-#: ../UpCloo/Widget/Partner.php:39
-msgid "UpCloo Network Widget"
-msgstr "Widget Rete di UpCloo"
+#~ msgid "Your sitekey"
+#~ msgstr "La tua Sitekey"
 
-#: ../UpCloo/Widget/Partner.php:41
-msgid "The UpCloo Virtual Partner SiteKey Widget"
-msgstr "Widget UpCloo per le Chiavi Sito Partner Virtuali"
+#~ msgid "signup for free"
+#~ msgstr "signup for free"
 
-#: ../UpCloo/Widget/Partner.php:57
-msgid "Virtual Partner:"
-msgstr "Partner Virtuale:"
-
-#: ../UpCloo/Widget/Partner.php:60
-msgid "Option template id:"
-msgstr "ID template opzioni"
-
+#~ msgid "Your option ID"
+#~ msgstr "ID opzioni"
